--- a/view/mainwindow.ui
+++ b/view/mainwindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>549</width>
-    <height>418</height>
+    <width>555</width>
+    <height>460</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -70,7 +70,7 @@ background-image: url(&quot;frameunla.png&quot;);</string>
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>320</y>
+         <y>370</y>
          <width>121</width>
          <height>20</height>
         </rect>
@@ -83,7 +83,7 @@ background-image: url(&quot;frameunla.png&quot;);</string>
        <property name="geometry">
         <rect>
          <x>140</x>
-         <y>320</y>
+         <y>370</y>
          <width>121</width>
          <height>21</height>
         </rect>
@@ -92,8 +92,8 @@ background-image: url(&quot;frameunla.png&quot;);</string>
       <widget class="QPushButton" name="pushButton">
        <property name="geometry">
         <rect>
-         <x>300</x>
-         <y>320</y>
+         <x>280</x>
+         <y>360</y>
          <width>111</width>
          <height>31</height>
         </rect>
@@ -105,7 +105,7 @@ background-image: url(&quot;frameunla.png&quot;);</string>
       <widget class="QPushButton" name="startButton">
        <property name="geometry">
         <rect>
-         <x>420</x>
+         <x>10</x>
          <y>320</y>
          <width>101</width>
          <height>31</height>
@@ -137,6 +137,32 @@ background-image: url(&quot;frameunla.png&quot;);</string>
         <string/>
        </property>
       </widget>
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="geometry">
+        <rect>
+         <x>240</x>
+         <y>320</y>
+         <width>111</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Entrenar</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>320</y>
+         <width>111</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Detener</string>
+       </property>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -146,7 +172,7 @@ background-image: url(&quot;frameunla.png&quot;);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>549</width>
+     <width>555</width>
      <height>25</height>
     </rect>
    </property>
